--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,17 +1,19 @@
 .search {
+    display: inline;
+    box-sizing: border-box;
     color:  black;
-    height: 100vh;
+    max-height: calc(100vh - 70px);
     width:  100%;
     background: #fcfafd;
 }
 
 .search img {
-    max-width: 17%;
+    max-width: 27%;
     height: 35%;
 }
 
 input {
-    width: 6%;
+    width: 80%;
     height: 18.5px;
     outline: none;
     margin-right: 5px;
@@ -31,6 +33,7 @@ input:focus {
 }
 
 .radius_select {
+    height: 30px;
     margin-top: 8px;
 }
 .radius {
@@ -42,44 +45,57 @@ input:focus {
     font-size: 1.25em;
 }
 select {
-    height: 25px;
+    width: 100%;
+    height: 30px;
     outline: none;
-    margin-right: 5px;
-    margin-left: 5px;
-    margin-top: 4px;
+    margin: auto;
 }
 
 .form {
-    margin-top: 10px;
+    overflow-y: auto;
+    box-sizing: border-box;
+    height: calc(100vh - 70px);
+    border-right: 1px solid gray;
+    width: 20%;
+    display: inline-block;
+    float:left;
+}
+.form input {
+    margin: auto;
+    width: 97%;
+    height:25px;
 }
 .form div {
-    padding-right: 5px;
     font-size: .75em;
 }
 .list-container {
-    display: flex;
     justify-content: center;
+    max-width: 90%;
+    display: flex;
     align-items: center;
-    margin-top: 15px;
 }
 
 .search-list {
-    width: 40%;
-    padding: 20px;
+    max-height: calc(100vh - 70px);
+    overflow-y: auto;
+    width: 100%;
+    float: right;
 }
 
 .search-list h1 {
-    margin-top: 18px;
+    margin: 18px 0px;
 }
 
 .list-gear {
-    font-size: 1.2em;
+    height: 100px;
+    width: 100%;
+    font-size: 1.5em;
     font-family: 'futura-light';
     position: relative;
+    margin-bottom: 1px;
+    border-bottom: .5px solid gray;
     background: rgba(255, 255, 255, 0.927);
-    margin: 5px;
-    border-radius: 5px;
-    box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
+    /* box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2); */
 }
 .list-gear div {
     display: inline-block;
@@ -112,13 +128,13 @@ a {
 }
 
 .list-gear img {
-    height: 70px;
-    width: 70px;
+    height: 99.5px;
+    width: 99.5px;
 }
 
 .listimage {
-    width: 95px !important;
-    height: 95px !important;
+    width: 100px !important;
+    height: 100px !important;
 }
 
 @media (min-width: 1500px) {
