--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -16,10 +16,9 @@ input {
     width: 80%;
     height: 18.5px;
     outline: none;
-    margin-right: 5px;
-    padding: 3px;
+    /* margin-right: 5px; */
+    /* padding: 3px; */
     border: .5px solid gray;
-    border-radius: 4px;
 }
 
 input:focus {
@@ -45,6 +44,7 @@ input:focus {
     font-size: 1.25em;
 }
 select {
+    border-radius: 0px;
     width: 100%;
     height: 30px;
     outline: none;
@@ -62,7 +62,7 @@ select {
 }
 .form input {
     margin: auto;
-    width: 97%;
+    width: 99%;
     height:25px;
 }
 .form div {
